assets/css/style2.css
@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@200;300;400;500;700&display=swap');
@font-face {
  font-family: 'AngerStyles';
  src: url('../font/AngerStyles.woff') format('woff');
}
body {
    overflow-x: hidden !important;
}
body, hr{
  color: rgba(255, 255, 255, 0.54);
  border-color: rgba(255, 255, 255, 0.54);
}
section.bg-home{
  position: relative;
  margin-bottom: 20px;
}
section{
  margin-bottom: 2em;
}

section.bg-home::after{
  content: '';
  background: url('../img/Donna_con_serpenti.jpg') no-repeat center top;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;

  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  opacity: 0.1;
  width: 100%;
  height: 100%;

}

.triangle{
  position: relative;
  overflow: hidden;
  max-width: 20em;
  right: 0;
  opacity: 0.5;
}
.menu-icons i{
  margin: 0.5em;
}
.go-store{
display: block;
color: rgba(103, 58, 183, 0.63);

  background: transparent;
  font-size: 0.9rem;
  font-weight: 500;
  position: relative;
  margin: 0 1em 0 auto;
}
.go-store:hover{
  color: #673ab7;
  font-weight: bolder;
}

.title{
  font-weight: bolder;
  /*text-transform: uppercase;*/
  letter-spacing: 0.2rem;
}
.textGradient {
  color: #ff8c00; /* fix for not webkit browsers */
  background: linear-gradient(#673ab7, #314da3);
  background-size: cover;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-fill-color: transparent;
}
.article{
  width: 80%;
}

.h1{
  font-family: 'AngerStyles';
}
.article-secondary{
  padding: 2em 0;
}

.footer-logo{
  font-family: 'AngerStyles', cursive;
  font-size: 3rem;
}
#footer{
  position: relative;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}
.footer-bg{
  position: absolute;
  top: 0;
   bottom: 0;
   right: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-image: linear-gradient(#673ab7, #314da3);
   clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 6%, 26% 0, 9% 13%);



}
.footer-content{
  position: relative;
  margin-top: 10em;
  color: black;
}
.footer-content a:hover{
  color:inherit;
}

.fa-facebook, .fa-instagram, .fa-deviantart, .fa-artstation, .fa-envelope{
font-size: 2em;
    }
    .fa-facebook:hover, .fa-instagram:hover, .fa-deviantart:hover, .fa-artstation:hover, .fa-envelope:hover{
opacity: 0.7;
    }
#privacy{
  margin-top: 2em;
}

@media only screen and (max-width:400px ) {

  section.bg-home{
    padding-bottom: 3em;
  }
}
  @media only screen and (min-width:780px && max-width:1000px){
    #footer{
      padding-top: 50em;
    }
  }

  @media only screen and (min-width:500px){


    #colorlib-main-nav .logo {
      font-size: 40px;
    }
  }


@media only screen and (min-width:780px) {
  .fa-facebook, .fa-instagram, .fa-deviantart, .fa-artstation, .fa-envelope{
  font-size: 3em;
  }

  .go-store{
    font-size: 1.5rem;
  }
  header .colorlib-navbar-brand .colorlib-logo {
    font-size: 2.5rem;
  }
  #colorlib-main-nav .colorlib-table .img:after{
    background-size: cover;
    background: url('../img/cemetery_300.jpg') right top no-repeat;
  }
  .h1{
   font-size: 2rem;
  }
}
}

